added Features Section

--- a/mtntours.com/index.html
+++ b/mtntours.com/index.html
@@ -7,11 +7,11 @@
 
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
 
-    <!-- <link rel="stylesheet" href="css/icon-font.css"> -->
+    <link rel="stylesheet" href="css/icon-font.css">
     <link rel="stylesheet" href="css/style.css">
     <!-- <link rel="shortcut icon" type="image/png" href="img/favicon.png"> -->
 
-    <title>Natours | Exciting tours for adventurous people</title>
+    <title>Mtntours | Exciting tours for adventurous people</title>
 </head>
 
 <body>
@@ -42,7 +42,7 @@
                     <h3 class="heading-tertiary u-margin-bottom-small">
                         You're going to fall in love with nature
                     </h3>
-                    <p class="paragraph"> 
+                    <p class="paragraph">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis aliquam ea fugiat quis exercitationem, odio magni sunt
                         necessitatibus voluptas recusandae voluptatum doloribus voluptatibus, in animi pariatur consequatur
                         aut modi! Nemo.
@@ -53,7 +53,7 @@
                     </h3>
                     <p class="paragraph">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis aliquam ea fugiat quis exercitationem, odio magni sunt
-                        necessitatibus voluptas recusandae voluptatum doloribus voluptatibus. 
+                        necessitatibus voluptas recusandae voluptatum doloribus voluptatibus.
                     </p>
 
                     <a href="#" class="btn-text">Learn more &rarr;</a>
@@ -67,7 +67,51 @@
                     </div>
                 </div>
             </div>
+        </section>
 
+        <section class="section-features">
+
+            <div class="row">
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-world"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis aliquam ea fugiat quis exercitationem.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-compass"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Meet nature</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis aliquam ea fugiat quis exercitationem.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-map"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Find your way</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis aliquam ea fugiat quis exercitationem.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-heart"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Live a healthier life</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis aliquam ea fugiat quis exercitationem.
+                        </p>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
