--- a/mtntours.com/index.html
+++ b/mtntours.com/index.html
@@ -32,7 +32,7 @@
     <main>
         <section class="section-about">
             <div class="u-center-text u-margin-bottom-big">
-                <h2 class="heading-secondary">
+                <h2 class="heading-secondary box effect2">
                     Exciting tours for adventurous people
                 </h2>
             </div>
@@ -221,7 +221,68 @@
             </div>
 
             <div class="u-center-text u-margin-top-huge">
-               <a href="#" class="btn btn--green">Discover all tours</a>
+                <a href="#" class="btn btn--green">Discover all tours</a>
+            </div>
+        </section>
+
+        <section class="section-stories">
+            <div class="bg-video">
+                <video class="bg-video__content" autoplay muted loop>
+                    <source src="img/video.mp4" type="video/msp4"> 
+                    <source src="img/video.webm" type="video/webm">
+                        Your browser in not supported!
+                </video>
+            </div>
+
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secondary">
+                    We make people genuinely happy
+                </h2>
+            </div>
+
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="./img/nat-8.jpg" alt="Person on a tour" class="story__img">
+                        <figcaption class="story__caption">
+                            Mary Smith
+                        </figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            I had the best week ever with my family
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi iste nam sapiente voluptas debitis alias placeat voluptatum
+                            aspernatur nemo quibusdam! Animi iste nam sapiente voluptas debitis alias placeat voluptatum
+                            aspernatur nemo quibusdam!
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="./img/nat-9.jpg" alt="Person on a tour" class="story__img">
+                        <figcaption class="story__caption">
+                            Jack Wilson
+                        </figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            WOW! my life is completely different now
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi iste nam sapiente voluptas debitis alias placeat voluptatum
+                            aspernatur nemo quibusdam! Animi iste nam sapiente voluptas debitis alias placeat voluptatum
+                            aspernatur nemo quibusdam!
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="u-center-text u-margin-top-huge">
+                <a href="#" class=" btn-text">Read all stories &rarr;</a>
             </div>
         </section>
     </main>
