--- a/mtntours.com/index.html
+++ b/mtntours.com/index.html
@@ -15,6 +15,42 @@
 </head>
 
 <body>
+    <div class="navigation">
+        <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+
+        <label for="navi-toggle" class="navigation__button">
+            <span class="navigation__icon">&nbsp;</span>
+        </label>
+
+        <div class="navigation__background">&nbsp;</div>
+
+        <nav class="navigation__nav">
+            <ul class="navigation__list">
+                <li class="navigation__item">
+                    <a href="#" class="navigation__link">
+                        <span>01</span>About Natous</a>
+                </li>
+                <li class="navigation__item">
+                    <a href="#" class="navigation__link">
+                        <span>02</span>Your benfits</a>
+                </li>
+                <li class="navigation__item">
+                    <a href="#" class="navigation__link">
+                        <span>03</span>Popular tours</a>
+                </li>
+                <li class="navigation__item">
+                    <a href="#" class="navigation__link">
+                        <span>04</span>Stories</a>
+                </li>
+                <li class="navigation__item">
+                    <a href="#" class="navigation__link">
+                        <span>05</span>Book now</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+
+
     <header class="header">
         <div class="header__logo-box">
             <img src="img/logo-white.png" alt="Logo" class="header__logo">
@@ -319,7 +355,6 @@
                                         Large tour group</label>
                                 </div>
                             </div>
-
                             <div class="form__group">
                                 <button class="btn btn--green">Next step &rarr;</button>
                             </div>
@@ -327,10 +362,46 @@
                     </div>
                 </div>
             </div>
-
         </section>
-
     </main>
+
+    <footer class="footer">
+        <div class="footer__logo-box">
+            <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo">
+        </div>
+        <div class="row">
+            <div class="col-1-of-2">
+                <div class="footer__navigation">
+                    <ul class="footer__list">
+                        <li class="footer__item">
+                            <a href="#" class="footer__link">Company</a>
+                        </li>
+                        <li class="footer__item">
+                            <a href="#" class="footer__link">Contact us</a>
+                        </li>
+                        <li class="footer__item">
+                            <a href="#" class="footer__link">Carrers</a>
+                        </li>
+                        <li class="footer__item">
+                            <a href="#" class="footer__link">Privacy policy</a>
+                        </li>
+                        <li class="footer__item">
+                            <a href="#" class="footer__link">Terms</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-1-of-2">
+                <p class="footer__copyright">
+                    Built by
+                    <a href="#" class="footer__link">Jaime Rosales</a> for his online course
+                    <a href="Advanced CSS and Sass" class="footer__link"></a>. Copyright &copy; Jaime Rosales
+                    <span>Photo by Daniel Olah on Unsplash</span>
+                </p>
+
+            </div>
+        </div>
+    </footer>
 
     <!-- 
     <secton class="grid-test">
@@ -399,10 +470,6 @@
                 </div>
             </div>
     </secton> -->
-    <span>Photo by Daniel Olah on Unsplash</span>
-
-    <footer>
-    </footer>
 
 </body>
 
