--- a/natours.com/index.html
+++ b/natours.com/index.html
@@ -28,7 +28,7 @@
         <nav class="navigation__nav">
             <ul class="navigation__list">
                 <li class="navigation__item">
-                    <a href="#section-about" class="navigation__link">
+                    <a href="#section-about" class="navigation__link" id="section-about">
                         <span>01</span>About Natours</a>
                 </li>
                 <li class="navigation__item">
@@ -36,7 +36,7 @@
                         <span>02</span>Your benfits</a>
                 </li>
                 <li class="navigation__item">
-                    <a href="#" class="navigation__link">
+                    <a href="#section-tours" class="navigation__link">
                         <span>03</span>Popular tours</a>
                 </li>
                 <li class="navigation__item">
@@ -107,7 +107,6 @@
 
                         <img srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w" sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
                             alt="Photo 3" class="composition__photo composition__photo--p3" src="img/nat-3-large.jpg">
-
 
                         <!-- 
                         <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
