--- a/trillo.com/index.html
+++ b/trillo.com/index.html
@@ -163,9 +163,40 @@
                                 <img src="img/user-6.jpg" alt="Friend 4" class="recommend__photo">
                             </div>
                         </div>
+
                     </div>
                     <div class="user-reviews">
-                        user revi
+                      <figure class="review">
+                            <blockquote class="review__text">
+                                Accusantium cumque, quas, ut corporis incidunt deserunt quae architecto voluptate 
+                                delectus, inventore iure aliquid aliquam.
+                            </blockquote>
+                            <figcaption class="review__user">
+                                <img src="img/user-1.jpg" alt="User 1" class="review__photo">
+                                <div class="review__user-box">
+                                    <p class="review__user-name">Nick Smith</p>
+                                    <p class="review__user-date">Feb 23rd, 2017</p>
+                                </div>
+                                <div class="review__rating">7.8</div>
+                            </figcaption>
+                      </figure>
+
+                      <figure class="review">
+                        <blockquote class="review__text">
+                            Accusantium cumque, quas, ut corporis incidunt deserunt quae architecto voluptate 
+                            delectus, inventore iure aliquid aliquam.
+                        </blockquote>
+                        <figcaption class="review__user">
+                            <img src="img/user-2.jpg" alt="User 1" class="review__photo">
+                            <div class="review__user-box">
+                                <p class="review__user-name">Mary Thomas</p>
+                                <p class="review__user-date">Sep 13th, 2017</p>
+                            </div>
+                            <div class="review__rating">3.8</div>
+                        </figcaption>
+                  </figure>
+
+                  <button class="btn-inline">Show all<span>&rarr;</span></button>
                     </div>
                 </div>
             </main>
