--- a/nexter.com/index.html
+++ b/nexter.com/index.html
@@ -84,7 +84,7 @@
         <div class="feature">
                 <svg class="feature__icon">
                         <use xlink:href="img/sprite.svg#icon-lock"></use>
-                        <h4 class="heading-4">Secure payments on Nexter</h4>
+                        <h4 class="heading-4 heading-4--dark">Secure payments on Nexter</h4>
                          <p class="feature__text">
                              Pariatur voluptatibus quidem consequatur harum, voluptatum mollitia quae.
                          </p>
@@ -96,11 +96,18 @@
         </section>
 
         <div class="story__pictures">
-            Story pictures
+            <img src="img/story-1.jpeg" alt="Couple with new house" class="story__img--1">
+            <img src="img/story-2.jpeg" alt="New house" class="story__img--2">
+
         </div>
 
         <div class="story__content">
-            Story content
+            <h3 class="heading-3 mb-sm">Happy Customers</h3>
+            <h2 class="heading-2 heading-2--dark mb-md">&ldquo;The best decision of our lives&rdquo;</h2>
+            <p class="story__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio 
+                necessitatibus pariatur voluptatibus. Quidem consequatur harum volupta!
+            </p>
+            <button class="btn">find your own home</button>
         </div> 
 
         <div class="section homes">
