finished gallery section

--- a/nexter.com/index.html
+++ b/nexter.com/index.html
@@ -108,7 +108,7 @@
             <button class="btn">find your own home</button>
         </div> 
 
-        <div class="section homes">
+        <section class="homes">
              <!-- 1st home card -->
             <div class="home">
                 <img src="img/house-1.jpeg" alt="Home 1" class="home__img">
@@ -312,17 +312,57 @@
                 </div>
                 <button class="btn home__btn">Contact realtor</button>
             </div>
-        </div>
+        </section>
 
-        <div class="section gallery">
-            Gallery
-        </div>
+        <section class="gallery">
+            <!-- (figure.gallery__item.gallery__item--$>img.gallery__img[src="img/gal-$.jpeg"][alt="Gallery image $"])*14 -->
+            <figure class="gallery__tem gallery__item--1">
+                    <img src="img/gal-1.jpeg" alt="Gallery image" class="gallery__img">
+            </figure>
+            <figure class="gallery__tem gallery__item--2">
+                    <img src="img/gal-2.jpeg" alt="Gallery image" class="gallery__img">
+            </figure>
+            <figure class="gallery__tem gallery__item--3">
+                    <img src="img/gal-3.jpeg" alt="Gallery image" class="gallery__img">
+            </figure>
+            <figure class="gallery__tem gallery__item--4">
+                    <img src="img/gal-4.jpeg" alt="Gallery image" class="gallery__img">
+            </figure>
+            <figure class="gallery__tem gallery__item--5">
+                    <img src="img/gal-5.jpeg" alt="Gallery image" class="gallery__img">
+            </figure>
+            <figure class="gallery__tem gallery__item--6">
+                    <img src="img/gal-6.jpeg" alt="Gallery image" class="gallery__img">
+            </figure>
+            <figure class="gallery__tem gallery__item--7">
+                    <img src="img/gal-7.jpeg" alt="Gallery image" class="gallery__img">
+            </figure>
+            <figure class="gallery__tem gallery__item--8">
+                    <img src="img/gal-8.jpeg" alt="Gallery image" class="gallery__img">
+            </figure>
+            <figure class="gallery__tem gallery__item--9">
+                    <img src="img/gal-9.jpeg" alt="Gallery image" class="gallery__img">
+            </figure>
+            <figure class="gallery__tem gallery__item--10">
+                    <img src="img/gal-10.jpeg" alt="Gallery image" class="gallery__img">
+            </figure>
+            <figure class="gallery__tem gallery__item--11">
+                    <img src="img/gal-11.jpeg" alt="Gallery image" class="gallery__img">
+            </figure>
+            <figure class="gallery__tem gallery__item--12">
+                    <img src="img/gal-12.jpeg" alt="Gallery image" class="gallery__img">
+            </figure>
+            <figure class="gallery__tem gallery__item--13">
+                    <img src="img/gal-13.jpeg" alt="Gallery image" class="gallery__img">
+            </figure>
+            <figure class="gallery__tem gallery__item--14">
+                    <img src="img/gal-14.jpeg" alt="Gallery image" class="gallery__img">
+            </figure>
+            
+        </section> 
 
-        <div class="footer">
+        <footer class="footer">
             footer
-        </div>
-
-
-        
+        </footer>
     </body>
 </html>
