fixed building process for deployment

--- a/natours.com/index.html
+++ b/natours.com/index.html
@@ -7,10 +7,9 @@
 
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
 
-    <!-- <link rel="stylesheet" href="css/icon-font.css"> -->
+    <link rel="stylesheet" href="css/icon-font.css">
     <link rel="stylesheet" href="css/style.css">
-    <!-- <link rel="shortcut icon" type="image/png" href="img/favicon.png"> -->
-
+<link rel="shortcut icon" type="image/png" href="img/favicon.png">
     <title>Natours | Exciting tours for adventurous people</title>
 </head>
 
@@ -80,17 +79,14 @@
                         You're going to fall in love with nature
                     </h3>
                     <p class="paragraph">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis aliquam ea fugiat quis exercitationem, odio magni sunt
-                        necessitatibus voluptas recusandae voluptatum doloribus voluptatibus, in animi pariatur consequatur
-                        aut modi! Nemo.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis aliquam ea fugiat quis exercitationem, odio magni sunt necessitatibus voluptas recusandae voluptatum doloribus voluptatibus, in animi pariatur consequatur aut modi! Nemo.
                     </p>
 
                     <h3 class="heading-tertiary u-margin-bottom-small">
                         Live adventure like you never have before
                     </h3>
                     <p class="paragraph">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis aliquam ea fugiat quis exercitationem, odio magni sunt
-                        necessitatibus voluptas recusandae voluptatum doloribus voluptatibus.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis aliquam ea fugiat quis exercitationem, odio magni sunt necessitatibus voluptas recusandae voluptatum doloribus voluptatibus.
                     </p>
 
                     <a href="#" class="btn-text">Learn more &rarr;</a>
@@ -99,14 +95,11 @@
                 <div class="col-1-of-2">
                     <div class="composition">
 
-                        <img srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w" sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
-                            alt="Photo 1" class="composition__photo composition__photo--p1" src="img/nat-1-large.jpg">
+                        <img srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w" sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px" alt="Photo 1" class="composition__photo composition__photo--p1" src="img/nat-1-large.jpg">
 
-                        <img srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w" sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
-                            alt="Photo 2" class="composition__photo composition__photo--p2" src="img/nat-2-large.jpg">
+                        <img srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w" sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px" alt="Photo 2" class="composition__photo composition__photo--p2" src="img/nat-2-large.jpg">
 
-                        <img srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w" sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
-                            alt="Photo 3" class="composition__photo composition__photo--p3" src="img/nat-3-large.jpg">
+                        <img srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w" sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px" alt="Photo 3" class="composition__photo composition__photo--p3" src="img/nat-3-large.jpg">
 
                         <!-- 
                         <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
@@ -302,9 +295,7 @@
                             I had the best week ever with my family
                         </h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi iste nam sapiente voluptas debitis alias placeat voluptatum
-                            aspernatur nemo quibusdam! Animi iste nam sapiente voluptas debitis alias placeat voluptatum
-                            aspernatur nemo quibusdam!
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi iste nam sapiente voluptas debitis alias placeat voluptatum aspernatur nemo quibusdam! Animi iste nam sapiente voluptas debitis alias placeat voluptatum aspernatur nemo quibusdam!
                         </p>
                     </div>
                 </div>
@@ -323,9 +314,7 @@
                             WOW! my life is completely different now
                         </h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi iste nam sapiente voluptas debitis alias placeat voluptatum
-                            aspernatur nemo quibusdam! Animi iste nam sapiente voluptas debitis alias placeat voluptatum
-                            aspernatur nemo quibusdam!
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi iste nam sapiente voluptas debitis alias placeat voluptatum aspernatur nemo quibusdam! Animi iste nam sapiente voluptas debitis alias placeat voluptatum aspernatur nemo quibusdam!
                         </p>
                     </div>
                 </div>
@@ -440,10 +429,7 @@
                 <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
                 <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
                 <p class="popup__text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Et odio pellentesque diam volutpat. Enim sed faucibus turpis in eu mi bibendum neque egestas. Dignissim
-                    convallis aenean et tortor at risus viverra adipiscing at. Amet justo donec enim diam vulputate ut pharetra.
-                    Varius sit amet mattis vulputate enim nulla aliquet porttitor lacus.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Et odio pellentesque diam volutpat. Enim sed faucibus turpis in eu mi bibendum neque egestas. Dignissim convallis aenean et tortor at risus viverra adipiscing at. Amet justo donec enim diam vulputate ut pharetra. Varius sit amet mattis vulputate enim nulla aliquet porttitor lacus.
                 </p>
                 <a href="#" class="btn btn--green">Book now</a>
             </div>
