--- a/nexter.com/index.html
+++ b/nexter.com/index.html
@@ -400,7 +400,7 @@
                 <li class="nav__item"><a href="#" class="nav__link">Submit your property</a></li>
                 <li class="nav__item"><a href="#" class="nav__link">Come work with us</a></li>
             </ul>
-            <p class="copyright">&copy; Copyright 2019 built by Jaime Rosales, designed by Jonas Schmedtmann</p>
+            <p class="copyright">&copy; Copyright 2019 Jaime Rosales.</p>
         </footer>
     </body>
 </html>
