--- a/natours.com/index.html
+++ b/natours.com/index.html
@@ -27,7 +27,7 @@
         <nav class="navigation__nav">
             <ul class="navigation__list">
                 <li class="navigation__item">
-                    <a href="#section-about" class="navigation__link" id="section-about">
+                    <a href="#section-about" class="navigation__link">
                         <span>01</span>About Natours</a>
                 </li>
                 <li class="navigation__item">
