--- a/loso.com/index.html
+++ b/loso.com/index.html
@@ -537,7 +537,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div id="copyright">
-                        <p>Copyright &copy; <a href="#"> - Loso</a></p>
+                        <p>Copyright &copy; <a href="#"> Jaime Rosales</a></p>
                     </div>
                 </div>
                 <div class="col-md-6">
