added otimized images

--- a/loso.com/index.html
+++ b/loso.com/index.html
@@ -134,8 +134,8 @@
                         </div>
                         <div class="choose-us-description">
                             <div class="choose-us-item wow fadeInUp" data-wow-duration=".5s" data-wow-delay="1s">
-                                <i class="fa fa-bolt choose-us-icon"></i>
-                                    <h3 class="heading-3">QUISQUE LACUS DUI</h3>
+                                <i class="fa fa-sync-alt choose-us-icon"></i>
+                                    <h3 class="heading-3">Free Updates</h3>
                                         <p class="choose-us-text">
                                             Lipsum Cum sociis natoque penatibus et magnis dis parturient montes, nascetur 
                                             ridiculus mus. Quisque lacus dui, interdum sit amet varius a, cursus sit amet sapien. 
@@ -143,8 +143,8 @@
                                         </p>
                             </div>
                             <div class="choose-us-item wow fadeInUp" data-wow-duration=".5s" data-wow-delay="1s">
-                                <i class="fa fa-bullhorn choose-us-icon"></i>
-                                    <h3 class="heading-3">DONEC EU PLACERAT NISI</h3>
+                                <i class="fa fa-user-plus choose-us-icon"></i>
+                                    <h3 class="heading-3">User Frendly</h3>
                                         <p class="choose-us-text">
                                             Lipsum Cum sociis natoque penatibus et magnis dis parturient montes, nascetur 
                                             ridiculus mus. Quisque lacus dui, interdum sit amet varius a, cursus sit amet sapien. 
@@ -152,8 +152,8 @@
                                         </p>
                             </div>
                             <div class="choose-us-item mb wow fadeInUp" data-wow-duration=".5s" data-wow-delay="1s">
-                                <i class="far fa-flag choose-us-icon"></i>
-                                    <h3 class="heading-3">PERSPICIATIS UNDE OMNIS</h3>
+                                <i class="fas fa-cog choose-us-icon"></i>
+                                    <h3 class="heading-3">Instant Support</h3>
                                         <p class="choose-us-text">
                                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus, sunt 
                                             reprehenderit dolores tempore ad facere suscipit est aliquid quis minus fugit ipsum 
@@ -288,8 +288,8 @@
                                     </p>
                         </div>
                         <div class="right-features_item">
-                            <i class="fa fa-rss right-features_icon"></i>
-                                 <h3 class="heading-3">Constant fee</h3>
+                            <i class="far fa-bell right-features_icon"></i>
+                                 <h3 class="heading-3">Notifications</h3>
                                     <p class="features-text">
                                         Lipsum Cum sociis natoque penatibus et magnis dis parturient montes, nascetur 
                                         ridiculus mus. 
