--- a/natours.com/index.html
+++ b/natours.com/index.html
@@ -131,8 +131,8 @@
                         <i class="feature-box__icon icon-basic-world"></i>
                         <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
                         <p class="feature-box__text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis aliquam ea fugiat quis
-                            exercitationem.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+                            aliquam ea fugiat quis exercitationem.
                         </p>
                     </div>
                 </div>
@@ -142,8 +142,8 @@
                         <i class="feature-box__icon icon-basic-compass"></i>
                         <h3 class="heading-tertiary u-margin-bottom-small">Meet nature</h3>
                         <p class="feature-box__text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis aliquam ea fugiat quis
-                            exercitationem.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+                            aliquam ea fugiat quis exercitationem.
                         </p>
                     </div>
                 </div>
@@ -153,8 +153,8 @@
                         <i class="feature-box__icon icon-basic-map"></i>
                         <h3 class="heading-tertiary u-margin-bottom-small">Find your way</h3>
                         <p class="feature-box__text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis aliquam ea fugiat quis
-                            exercitationem.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+                            aliquam ea fugiat quis exercitationem.
                         </p>
                     </div>
                 </div>
@@ -164,8 +164,8 @@
                         <i class="feature-box__icon icon-basic-heart"></i>
                         <h3 class="heading-tertiary u-margin-bottom-small">Live a healthier life</h3>
                         <p class="feature-box__text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis aliquam ea fugiat quis
-                            exercitationem.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+                            aliquam ea fugiat quis exercitationem.
                         </p>
                     </div>
                 </div>
@@ -465,75 +465,6 @@
             </div>
         </div>
     </div>
-
-    <!-- 
-    <secton class="grid-test">
-        <div class="row">
-            <div class="col-1-of-2">
-                Col 1 of 2
-            </div>
-            <div class="col-1-of-2">
-                Col 1 of 2
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-1-of-3">
-                Col 1 of 3
-            </div>
-            <div class="col-1-of-3">
-                Col 1 of 3
-            </div>
-            <div class="col-1-of-3">
-                Col 1 of 3
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-1-of-3">
-                Col 1 of 3
-            </div>
-            <div class="col-2-of-3">
-                Col 2 of 3
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-1-of-4">
-                Col 1 of 4
-            </div>
-            <div class="col-1-of-4">
-                Col 1 of 4
-            </div>
-            <div class="col-1-of-4">
-                Col 1 of 4
-            </div>
-            <div class="col-1-of-4">
-                Col 1 of 4
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-1-of-4">
-                Col 1 of 4
-            </div>
-            <div class="col-1-of-4">
-                Col 1 of 4
-            </div>
-            <div class="col-2-of-4">
-                Col 2 of 4
-            </div>
-        </div>
-            <div class="row">
-                <div class="col-1-of-4">
-                    Col 1 of 4
-                </div>
-                <div class="col-3-of-4">
-                    Col 3 of 4
-                </div>
-            </div>
-    </secton> -->
-
 </body>
 <script src="./JS/main.js"></script>
 
