--- a/omnifood.com/index.html
+++ b/omnifood.com/index.html
@@ -2,12 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="vendors/css/grid">
 
-    <title>omnifood</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet"> 
+
+    <title>Omnifood</title>
 </head>
 <body>
-    <h1>Hello world</h1>
+    <header class="header">
+        <div class="header__text-box">
+            <h1>Goodbye junk food. <br>Hello super healthy meals</h1>
+            <a class="btn btn-full" href="#">I'm hungry</a>
+            <a class="btn btn-ghost" href="#">Show me more</a>
+        </div>
+    </header>
 </body>
 </html>
