added logo and navigation menu

--- a/omnifood.com/index.html
+++ b/omnifood.com/index.html
@@ -5,7 +5,6 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="vendors/css/grid">
-
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet"> 
 
@@ -13,6 +12,17 @@
 </head>
 <body>
     <header class="header">
+        <nav class="main__nav">
+            <div class="row">
+                <img class="header__logo" src="./images/logo-white.png" alt="Logo">
+                <ul class="main__nav-list">
+                    <li class="main__nav-item"><a href="#" class="main__nav-link">Food delivery</a></li>
+                    <li class="main__nav-item"><a href="#" class="main__nav-link">How it works</a>  </li>
+                    <li class="main__nav-item"><a href="#" class="main__nav-link">Our cities</a>  </li>
+                    <li class="main__nav-item"><a href="#" class="main__nav-link">Sign up</a>  </li>
+                </ul>
+            </div>
+        </nav>
         <div class="header__text-box">
             <h1>Goodbye junk food. <br>Hello super healthy meals</h1>
             <a class="btn btn-full" href="#">I'm hungry</a>
