started meal section

--- a/omnifood.com/index.html
+++ b/omnifood.com/index.html
@@ -69,6 +69,53 @@
                 </div>
             </div>
         </section>
+
+        <section class="section__meals">
+            <ul class="section__meals--showcase">
+                <li class="section__meals--showcase-item">
+                    <figure class="section__meals--showcase-foto">
+                        <img src="./images/1.jpg" alt="Korean bibimbap with egg and vegetables">
+                    </figure>
+                </li>
+                <li class="section__meals--showcase-item">
+                    <figure class="section__meals--showcase-foto">
+                        <img src="./images/2.jpg" alt="Simple italian pizza with cherry tomatoes">
+                    </figure>
+                </li>
+                <li class="section__meals--showcase-item">
+                    <figure class="section__meals--showcase-foto">
+                        <img src="./images/3.jpg" alt="Chiken breast steak with vegetables">
+                    </figure>
+                </li>
+                <li class="section__meals--showcase-item">
+                    <figure class="section__meals--showcase-foto">
+                        <img src="./images/4.jpg" alt="Autumn pumpkin soup">
+                    </figure>
+                </li>
+            </ul>
+            <ul class="meals__showcase">
+                <li class="section__meals--showcase-item">
+                    <figure class="section__meals--showcase-foto">
+                        <img src="./images/5.jpg" alt="Paleo beef steak with vegetables">
+                    </figure>
+                </li>
+                <li class="section__meals--showcase-item">
+                    <figure class="section__meals--showcase-foto">
+                        <img src="./images/6.jpg" alt="Healthy baquette with egg and vegetables">
+                    </figure>
+                </li>
+                <li class="section__meals--showcase-item">
+                    <figure class="section__meals--showcase-foto">
+                        <img src="./images/7.jpg" alt="Burger with cheddar and bacon">
+                    </figure>
+                </li>
+                <li class="section__meals--showcase-item">
+                    <figure class="section__meals--showcase-foto">
+                        <img src="./images/8.jpg" alt="Granola with cherries and strawberries">
+                    </figure>
+                </li>
+            </ul>
+        </section>
     </main>
     
 </body>
