added steps section

--- a/omnifood.com/index.html
+++ b/omnifood.com/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="vendors/css/grid">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap"
+        rel="stylesheet">
 
     <title>Omnifood</title>
 </head>
+
 <body>
     <header class="header">
         <nav class="main__nav">
@@ -17,9 +20,9 @@
                 <img class="header__logo" src="./images/logo-white.png" alt="Logo">
                 <ul class="main__nav-list">
                     <li class="main__nav-item"><a href="#" class="main__nav-link">Food delivery</a></li>
-                    <li class="main__nav-item"><a href="#" class="main__nav-link">How it works</a>  </li>
-                    <li class="main__nav-item"><a href="#" class="main__nav-link">Our cities</a>  </li>
-                    <li class="main__nav-item"><a href="#" class="main__nav-link">Sign up</a>  </li>
+                    <li class="main__nav-item"><a href="#" class="main__nav-link">How it works</a> </li>
+                    <li class="main__nav-item"><a href="#" class="main__nav-link">Our cities</a> </li>
+                    <li class="main__nav-item"><a href="#" class="main__nav-link">Sign up</a> </li>
                 </ul>
             </div>
         </nav>
@@ -34,44 +37,49 @@
             <div class="row">
                 <h2 class="heading-secondary">Get food fast &mdash; not fast food</h2>
                 <p class="section__features--heading-text">
-                    Hello, we’re Omnifood, your new premium food delivery service. We know you’re always busy. No time for cooking. So let us take care of that, 
+                    Hello, we’re Omnifood, your new premium food delivery service. We know you’re always busy. No time
+                    for cooking. So let us take care of that,
                     we’re really good at it, we promise!
                 </p>
             </div>
             <div class="row">
                 <div class="col span-1-of-4 box">
-                    <ion-icon class="section__features--icon" name="calendar-outline"></ion-icon>                
+                    <ion-icon class="section__features--icon" name="calendar-outline"></ion-icon>
                     <h3 class="heading-tertiary">Up to 365 days/year</h3>
                     <p class="section__features--text">
-                        Never cook again! We really mean that. Our subscription plans include up to 365 days/year coverage. You can also choose to order more flexibly if that's your style.
+                        Never cook again! We really mean that. Our subscription plans include up to 365 days/year
+                        coverage. You can also choose to order more flexibly if that's your style.
                     </p>
                 </div>
                 <div class="col span-1-of-4 box">
-                    <ion-icon class="section__features--icon" name="stopwatch-outline"></ion-icon>                
+                    <ion-icon class="section__features--icon" name="stopwatch-outline"></ion-icon>
                     <h3 class="heading-tertiary">Ready in 20 minutes</h3>
                     <p class="section__features--text">
-                        You're only twenty minutes away from your delicious and super healthy meals delivered right to your home. We work with the best chefs in each town to ensure that you're 100% happy.
+                        You're only twenty minutes away from your delicious and super healthy meals delivered right to
+                        your home. We work with the best chefs in each town to ensure that you're 100% happy.
                     </p>
                 </div>
                 <div class="col span-1-of-4 box">
                     <ion-icon class="section__features--icon" name="nutrition-outline"></ion-icon>
                     <h3 class="heading-tertiary">100% organic</h3>
                     <p class="section__features--text">
-                        All our vegetables are fresh, organic and local. Animals are raised without added hormones or antibiotics. Good for your health, the environment, and it also tastes better!
+                        All our vegetables are fresh, organic and local. Animals are raised without added hormones or
+                        antibiotics. Good for your health, the environment, and it also tastes better!
                     </p>
                 </div>
                 <div class="col span-1-of-4 box">
                     <ion-icon class="section__features--icon" name="cart-outline"></ion-icon>
                     <h3 class="heading-tertiary">Order anything</h3>
                     <p class="section__features--text">
-                        We don't limit your creativity, which means you can order whatever you feel like. You can also choose from our menu containing over 100 delicious meals. It's up to you!
+                        We don't limit your creativity, which means you can order whatever you feel like. You can also
+                        choose from our menu containing over 100 delicious meals. It's up to you!
                     </p>
                 </div>
             </div>
         </section>
 
         <section class="section__meals">
-            <ul class="section__meals--showcase">
+            <ul class="section__meals--showcase clearfix">
                 <li class="section__meals--showcase-item">
                     <figure class="section__meals--showcase-foto">
                         <img src="./images/1.jpg" alt="Korean bibimbap with egg and vegetables">
@@ -93,7 +101,7 @@
                     </figure>
                 </li>
             </ul>
-            <ul class="meals__showcase">
+            <ul class="meals__showcase clearfix">
                 <li class="section__meals--showcase-item">
                     <figure class="section__meals--showcase-foto">
                         <img src="./images/5.jpg" alt="Paleo beef steak with vegetables">
@@ -116,8 +124,36 @@
                 </li>
             </ul>
         </section>
+
+        <section class="section__steps">
+            <div class="row">
+                <h2 class="heading-secondary">How it works &mdash; simple as 1,2,3</h2>
+            </div>
+            <div class="row">
+                 <div class="col span-1-of-2 steps-box">
+                     <img class="section__steps--app-screen" src="./images/app-iPhone.png" alt="Omnifood app on iphone">
+                 </div>
+                 <div class="col span-1-of-2 steps-box">
+                     <div class="section__steps--work-step">
+                         <div class="section__steps--circle">1</div>
+                         <p>Choose the subscription plan that best fits your needs and sign up today</p>
+                     </div>
+                     <div class="section__steps--work-step">
+                         <div class="section__steps--circle">2</div>
+                         <p>Order your delicious meal using our mobile app or website. Or you can even call us!</p>
+                     </div>
+                     <div class="section__steps--work-step">
+                         <div class="section__steps--circle">3</div>
+                         <p>Enjoy meal after less than 20 minutes. See you the next time!</p>
+                     </div>
+                 <a href="#" class="btn-app"><img src="images/download-app.svg" alt="App Store Button"></a>
+                 <a href="#" class="btn-app"><img src="images/download-app-android.png" alt="App Store Button"></a>
+               </div>
+            </div>
+        </section>
     </main>
-    
+
 </body>
 <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
+
 </html>
